@@ -69,7 +69,7 @@ public class DigestCalculator {
     private static String bytesToHex(byte[] bytes) {
         StringBuilder result = new StringBuilder();
         for (byte b : bytes) {
-            result.append(String.format("%02x", b));
+            result.append("%02x".formatted(b));
         }
         return result.toString();
     }
